added a bash script to deploy the app on Mac, and ResoruceManagerService to deal with resources externally from the JAR file to maintain writable resources
added a bash script to deploy the app on Mac.

Does not work with ColorManagerService as that relied on writing to styles.css which does not work in JAR format

minor graphics improvements by converting HeavisideStep.java to RectFunction.java

progress restoring ColorMangerService for mac deployment

added ResourceManagerService to manage resources outside the JAR so that resource files can be written to at runtime