@@ -3,6 +3,12 @@
 ## About
 PADDL, Precision Analysis & Design for Dynamic Loading, is a JavaFx desktop app built to simplify technical civil engineering design and analysis. The primary goal of the project is to implement effective UI/UX design to lower the barrier of technical knowledge required to make informed, analytical civil engineering decisions in less time.
 
+PADDL is built as a custom software solution for [WECCA](https://wecca.org/), the Western Engineering Concrete Canoe Association, as a candidate for our 2025 EFA (Enhanced Focus Area). PADDL's modules are designed specifically as solutions to aid civil engineering processes specifically centered around WECCA's concrete canoe.
+
+### The Beam Module
+
+Currently, the program has one module to solve for the canoe's internal shear force and bending moment distributions. There are intentions for the project to grow in size over the next couple of years, with plans for 4 other modules.
+
 <div style="display: flex; flex-direction: row;">
     <img src="images/ui.png" alt="ui" style="width: 49%;" />
     <img src="images/side-menu.png" alt="side menu" style="width: 49%;" />
@@ -11,11 +17,13 @@ PADDL, Precision Analysis & Design for Dynamic Loading, is a JavaFx desktop app 
     <img src="images/bmd.png" alt = "bmd" style="width: 49%;" />
 </div>
 
-PADDL is built as a custom software solution for [WECCA](https://wecca.org/), the Western Engineering Concrete Canoe Association, as a candidate for our 2025 EFA (Enhanced Focus Area). PADDL's modules are designed specifically as solutions to aid civil engineering processes specifically centered around WECCA's concrete canoe.
+Here we can see the process of solving a load case for 2024's canoe "Shark Bait". The user has added some external loads (first image), and then solves for equilibrium of the floating canoe to get an upward facing buoyancy reaction force such that the canoe is floating in static equilibrium. From there, the user can generate corresponding Shear Force and Bending Moment diagrams (third and fourth image) which provide valuable information into the internal forces of the canoe as it floats.
 
-Currently, the program has one module to solve for the canoe's internal shear force and bending moment distributions. There are intentions for the project to grow in size over the next couple of years, where it will become increasingly more useful for WECCA over time.
+The hull geometry and material properties of Shark Bait are precisely modeled in the program, allowing for precise static analysis calculations with realistic assumptions. This allows PADDL to produce results that match real world results within only a small margin of error. 
 
-### Summer '24 goals:
+The engineer working on the canoe can also download the canoe model as a YAML file. This file can be saved for later, or shared easily between engineers during the design and analysis process.
+
+### Summer '24 Development Overview:
 - Fully customizable canoe hull geometry and material properties
 - Mathematical models with calculus and structural engineering methodologies of the canoe
 - Two Finished Scenarios to solve for the canoe's equilibrium
@@ -26,8 +34,7 @@ Currently, the program has one module to solve for the canoe's internal shear fo
 - Canoe model clearly displayed visually
 - Mapping of the canoe model to a file to be downloaded & uploaded for sharing data between engineers
 - Infrastructure to include other modules
-
-- Finish: Deploy an executable, downloadable soon at [https://wecca.org/](https://wecca.org/)
+- TODO: Deploy to Mac and PC (.exe / .app), downloadable at [https://wecca.org/](https://wecca.org/)
 
 ### Long Term Goals:
 - Grow to include club general members as casual contributors in the '24-'25 school year
@@ -73,6 +80,15 @@ Currently, the program has one module to solve for the canoe's internal shear fo
 
    Add the jar files from the boxed link. The list should show JFoenix and Scenebuilder as shown. </br> <br/>
 
+5.  <b>Add VM options</b><br/>
+    You need to add VM options in order to run PADDL in IntelliJ. In the deployed app these are handled for you already. <br/>
+    `--add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=com.jfoenix  --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix`
+
+    <div style="display: flex; flex-direction: column; width: 80%; align-items: center; justify-content: center; padding: 10px 0 10px 0">
+      <img src="images/run-config.png" alt="run-config" /> <br/>
+      <img src="images/vm-options.png" alt="vm-options" />
+    </div>
+
 ## Summer '24 Feature Development Roadmap
 
 - [X] Implement material design look and feel
@@ -95,21 +111,15 @@ Currently, the program has one module to solve for the canoe's internal shear fo
   - [X] Solve for a buoyancy load distribution based on the self-weight distribution of the hull
   - [X] Solve for a buoyancy load distribution including the hull and external loads
   - [X] Ensure the canoe does not tip or sink
+
+- [ ] Deployment! 
      
 <!-- CONTRIBUTING -->
 ## Contributing
 Starting in September for the 2024-2025 school year, any WECCA members involved on the software team can contribute to PADDL!
 
-1. Go into the directory where you cloned the project. For example, I keep my project on my desktop so: <br/>
-   ```
-   cd "C:\Users\tyler\OneDrive\Desktop\canoe-analysis"
-   ```
-2. Create your own personal branch (`git checkout -b branch-name`). Use your full name as the branch name separated with dashes (i.e. tyler-liquornik)
-3. Stage your changes (`git add .`)
-4. Commit your Changes (`git commit -m "write a commit message here"`). Ignore the `-b` if the branch has already been created.
-5. Push your commit(s) (`git push origin branch-name`)
-6. Open a pull request, and be ready to describe the feature implemented or bugfix and justify/explain your work in the comments
-7. Wait for approval. You can send a message in the Slack channel to ask, or wait until meeting to discuss the pull request
+Please ensure you connect with a Software Lead before starting any work for discussion. You can connect over our [Slack channel](https://join.slack.com/t/wecca2023-24/shared_invite/zt-21o0f5jn9-al9lZLzSOjTrxhflOeR3eQ) in the `#software` channel. </br>
+We are open to discussing any bugfixes or features suggested, and encourage club members to participate in the development process.
 
 <!-- CONTACT -->
 ## Contact
@@ -135,9 +145,7 @@ Project Link: [https://github.com/Tyler-Liquornik/canoe-analysis](https://github
 [product-screenshot]: images/screenshot.png -->
 
 <!-- 
-These are VM options required to run PADDL prior to implementation of burningwave to manage the Java reflection API. 
-I've included these here in case burningwave has future issues, however it's possible more options are required as PADDL is built up from the time of burningwave implementation
-
+Required VM options to run PADDL
 --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=com.jfoenix  --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
 
 -->
